--- a/ phukien/GiaPhuc/Web.config
+++ b/ phukien/GiaPhuc/Web.config
@@ -11,11 +11,13 @@
     <sectionGroup name="RewriteURL">
       <section name="URLSettings" type="System.Configuration.NameValueSectionHandler,System,Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     </sectionGroup>
-  <section name="dotless" type="dotless.Core.configuration.DotlessConfigurationSectionHandler, dotless.Core" /><section name="combres" type="Combres.ConfigSectionSetting, Combres, Version=2.2, Culture=neutral, PublicKeyToken=1ca6b37997dd7536" /></configSections>
+  <section name="dotless" type="dotless.Core.configuration.DotlessConfigurationSectionHandler, dotless.Core" /><section name="combres" type="Combres.ConfigSectionSetting, Combres, Version=2.2, Culture=neutral, PublicKeyToken=1ca6b37997dd7536" />
+  </configSections>
+  
   <connectionStrings>
-    <add name="PhukienConnectionString" connectionString="data source=123.30.185.47;initial catalog=phukienipadx_com;UID=phukienipadx;Password=admin1!;" />
-    <add name="ConnectionString" connectionString="data source=123.30.185.47;initial catalog=phukienipadx_com;UID=phukienipadx;Password=admin1!;Charset=utf8;" />
-    <add name="ApplicationConnection" connectionString="metadata=res://*/NiceStore.csdl|res://*/NiceStore.ssdl|res://*/NiceStore.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=123.30.185.47;initial catalog=phukienipadx_com;UID=phukienipadx;Password=admin1!;multipleactiveresultsets=True;App=EntityFramework&quot;" />
+    <add name="PhukienConnectionString" connectionString="data source=112.78.2.42;initial catalog=phu4ba65_ipadx;UID=phu4ba65_ipadx;Password=admin@1;" />
+    <add name="ConnectionString" connectionString="data source=112.78.2.42;initial catalog=phu4ba65_ipadx;UID=phu4ba65_ipadx;Password=admin@1;Charset=utf8;" />
+    <add name="ApplicationConnection" connectionString="metadata=res://*/NiceStore.csdl|res://*/NiceStore.ssdl|res://*/NiceStore.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=112.78.2.42;initial catalog=phu4ba65_ipadx;UID=phu4ba65_ipadx;Password=admin@1;multipleactiveresultsets=True;App=EntityFramework&quot;" />
     <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -61,18 +63,18 @@
         <add name="AspNetWindowsTokenRoleProvider" type="System.Web.Security.WindowsTokenRoleProvider" applicationName="/" />
       </providers>
     </roleManager>
-    <pages validateRequest="false" controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"><namespaces><add namespace="Combres" /></namespaces></pages>
+    <pages validateRequest="false" controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"></pages>
     <!--<customErrors mode="On" defaultRedirect="Error.htm"  redirectMode="ResponseRedirect">
       <error statusCode="403" redirect="Error_403.htm" />
       <error statusCode="404" redirect="Error_404.htm" />
     </customErrors>-->
-    <customErrors mode="On">
+    <customErrors mode="Off">
       <error statusCode="404" redirect="/loi-404" />
     </customErrors>
-  <httpHandlers><add path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler, dotless.Core" /></httpHandlers></system.web>
+  <httpHandlers></httpHandlers></system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
-  <handlers><add name="dotless" path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler,dotless.Core" resourceType="File" preCondition="" /></handlers></system.webServer>
+  <handlers></handlers></system.webServer>
   <system.web.extensions>
     <scripting>
       <webServices>
@@ -80,11 +82,9 @@
       </webServices>
     </scripting>
   </system.web.extensions>
-<dotless minifyCss="false" cache="true" web="false" /><combres definitionUrl="~/App_Data/combres.xml" />
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="AjaxMin" publicKeyToken="21ef50ce11b5d80f" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.84.4790.14405" newVersion="4.84.4790.14405" />
       </dependentAssembly>
     </assemblyBinding>
