--- a/ phukien/phukienipadx.Dal/Properties/Settings.settings
+++ b/ phukien/phukienipadx.Dal/Properties/Settings.settings
@@ -10,5 +10,13 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=123.30.185.47;Initial Catalog=phukienipadx_com;Persist Security Info=True;User ID=phukienipadx;Password=admin1!</Value>
     </Setting>
+    <Setting Name="phu4ba65_ipadxConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=112.78.2.106,1433;Initial Catalog=phu4ba65_ipadx;Persist Security Info=True;User ID=phu4ba65_ipadx;Password=admin@1&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=112.78.2.106,1433;Initial Catalog=phu4ba65_ipadx;Persist Security Info=True;User ID=phu4ba65_ipadx;Password=admin@1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
